Tue Jan  2 21:39:54 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - drivers/genericups.c: add missing newline at the end of the file

Tue Jan  2 21:12:17 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - drivers/bcmxcp.c, drivers/bestfcom.c: 'experimental_driver = 1'
   must be in the upsdrv_banner(), otherwise an informative message
   won't be displayed

Tue Jan  2 21:03:54 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - drivers/safenet.c: flush input and output buffers before sending
   a command (to get rid of spurious PnP replies on some devices)

Tue Jan  2 20:59:17 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - powerpanel: add new driver for CyberPower text protocol UPS (should
   obsolete 'cpsups' and 'nitram' when it is confirmed it works for
   all currently supported models) 

Tue Jan  2 01:52:40 UTC 2007 / Carlos Rodrigues <carlos.efr@mail.telepac.pt>

 - megatec: changed driver banner to include the contents of "progname"
 - cpsups.c: added missing "sys/ioctl.h" that was breaking the build
 - megatec.8, al175.8: fixed broken name section ("\(hy" instead of "\-")
   as detected by doclifter (http://catb.org/~esr/doclifter/)

Mon Jan  1 20:54:18 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - docs/new-names.txt: added ups.realpower, ups.realpower.nominal,
   input.frequency.low, input.frequency.high and battery.capacity

Sat Dec 30 20:54:53 UTC 2006 / Arjen de Korte <arjen@de-korte.org>

 - drivers/cpsups.c: updated version from Doug Reynolds

Sat Dec 30 20:39:25 UTC 2006 / Arjen de Korte <arjen@de-korte.org>

 - drivers/al175.c: insert 'broken_driver = 1' (see comments in source)

Fri Dec 29 11:30:21 UTC 2006 / Arjen de Korte <arjen@de-korte.org>

 - common/common.c: stupid typo

Fri Dec 29 11:15:10 UTC 2006 / Arjen de Korte <arjen@de-korte.org>

 - common/common.c, clients/upssched.c: check for errors just in case something
   goes horribly wrong with duplicating file handles
