@@ -34,7 +34,7 @@
 #include "serial.h"
 #include "powerpanel.h"
 
-#define DRV_VERSION "0.10"
+#define DRV_VERSION "0.11"
 
 static char powpan_reply[SMALLBUF];
 
@@ -164,7 +164,7 @@ static int get_ident(void)
 		 * READ #2\r
 		 */
 		if ((powpan_command("\r") < 0) || (powpan_reply[1] != '2'))
-			continue;
+			upslogx(LOG_INFO, "Sent \"\\r\", expected \"#2\\r\" but got \"%s\"", powpan_reply);
 
 		/*
 		 * WRITE P4\r
@@ -183,6 +183,8 @@ static int get_ident(void)
 
 			return 1;
 		}
+
+		upslogx(LOG_INFO, "Sent \"P4\\r\", expected \"#<something>\" but got \"%s\"", powpan_reply);
  	}
 
 	return 0;
